@@ -2,6 +2,9 @@
 
 S3method(heatmaply,default)
 S3method(heatmaply,heatmapr)
+S3method(normalize,data.frame)
+S3method(normalize,default)
+S3method(normalize,matrix)
 S3method(percentalize,data.frame)
 S3method(percentalize,default)
 S3method(percentalize,matrix)
@@ -9,6 +12,7 @@ export(ggheatmap)
 export(heatmaply)
 export(heatmapr)
 export(is.heatmapr)
+export(normalize)
 export(percentalize)
 export(side_color_plot)
 import(dendextend)
