@@ -107,3 +107,85 @@ percentalize.matrix <- function(x, ...) {
 
 
 
+
+
+
+
+#' @title  Normalization transformation (0-1)
+#' @export
+#'
+#' @description
+#' An Empirical Normalization Transformation brings data to the 0 to 1 scale.
+#' This is similar to \link{percentalize} in that it allows to compare variables
+#' of different scales, but it also keeps the shape of the distribution.
+#'
+#' @param x a vector or a data.frame.
+#'
+#' @param ... Currently ignored.
+#'
+#' @return
+#' A vector (or data.frame) after normalizing the numeric variables.
+#'
+#' @aliases
+#' normalize.default
+#' normalize.data.frame
+#' normalize.matrix
+#' @examples
+#' \dontrun{
+#' x <- mtcars
+#' x <- data.frame(x)
+#' x$am <- factor(x$am)
+#' x$vs <- factor(x$vs)
+#' heatmaply(percentalize(x))
+#' heatmaply(normalize(x))
+#'
+#'
+#' x <- data.frame(a = 1:10, b = 11:20)
+#' x[4:6, 1:2] <- NA
+#' percentalize(x)
+#' percentalize(x[,1])
+#'
+#' }
+normalize <- function(x, ...) {
+  UseMethod("normalize")
+}
+
+
+# http://stats.stackexchange.com/questions/70801/how-to-normalize-data-to-0-1-range
+#' @export
+normalize.default <- function(x, ...) {
+  ss_no_NA <- !is.na(x)
+  x[ss_no_NA] <- (x[ss_no_NA]-min(x[ss_no_NA]))/(max(x[ss_no_NA])-min(x[ss_no_NA]))
+  x
+}
+
+
+#' @export
+normalize.data.frame <- function(x, ...) {
+
+  ss_numeric <- sapply(x, is.numeric)
+  normalize
+
+
+  for(i in which(ss_numeric)) {
+      x[, i] <- normalize(x[, i])
+  }
+
+  x
+}
+
+
+
+#' @export
+normalize.matrix <- function(x, ...) {
+  x <- as.data.frame(x)
+  normalize(x)
+}
+
+
+
+
+
+
+
+
